--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -91,4 +91,22 @@
         android:layout_alignStart="@+id/textView3"
         android:id="@+id/textView4"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
+
+    <Button
+        android:text="Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button5"
+        android:layout_alignParentStart="true"
+        android:id="@+id/button6"
+        android:onClick="click6" />
+
+    <Button
+        android:text="Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button6"
+        android:layout_alignEnd="@+id/button6"
+        android:id="@+id/button8"
+        android:onClick="click7" />
 </RelativeLayout>
